[project]
name = "streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "pandas>=2.3.2",
    "pydantic-ai[logfire]>=0.7.4",
    "streamlit>=1.48.1",
    "tabulate>=0.9.0",
    "matplotlib>=3.9.2",
]
